Fix modal spacing inside

--- a/client/style/modal.css
+++ b/client/style/modal.css
@@ -10,10 +10,10 @@
 .modalOpen {
   position: fixed;
   background-color: #FFFFFF;
-  top: 0;
+  top: 40px;
   left: 0;
   right: 0;
-  bottom: 0;
+  bottom: 40px;
   overflow: auto;
   outline: none;
   border: none;
@@ -22,7 +22,7 @@
   animation-timing-function: ease-out;
   width: 780px;
   margin: auto;
-  border-radius: 15px;
+  border-radius: 10px;
   box-shadow: 0px 0px 30px rgba(0, 0, 0, .25);
 }
 
@@ -38,10 +38,10 @@
 .modalClosed {
   position: fixed;
   background-color: #FFFFFF;
-  top: 0;
+  top: 40px;
   left: 0;
   right: 0;
-  bottom: 0;
+  bottom: 40px;
   overflow: auto;
   outline: none;
   border: none;
@@ -50,7 +50,7 @@
   animation-timing-function: ease-out;
   width: 780px;
   margin: auto;
-  border-radius: 15px;
+  border-radius: 10px;
   box-shadow: 0px 0px 30px rgba(0, 0, 0, .25);
 }
 
